Dark Mode Fix

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -27,9 +27,9 @@
   box-shadow: 0px 2px 10px var(--shadow-color);
 }
 .with-shadow-three {
-  border-left: 1px solid var(--border-color);
-  border-right: 1px solid var(--border-color);
-  border-bottom: 1px solid var(--border-color);
+  border-left: 0px solid var(--border-color);
+  border-right: 0px solid var(--border-color);
+  border-bottom: 0px solid var(--border-color);
   box-shadow: 0px 2px 10px var(--shadow-color);
 }
 .with-shadow-bottom {
