--- a/src/styles/components/_country_card.scss
+++ b/src/styles/components/_country_card.scss
@@ -13,10 +13,12 @@
   padding: 1.5rem 1rem 3rem 1rem;
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
+  width: 21rem;
 }
 .country-img {
-  height: 12.5rem;
-  width: 20rem;
+  height: 13rem;
+  // width: 20rem;
+  width: 21rem;
 }
 .country-img img {
   width: 100%;
