--- a/src/styles/components/_country_details.scss
+++ b/src/styles/components/_country_details.scss
@@ -49,7 +49,7 @@
       padding-left: 2rem;
     }
     .pt-2 {
-      margin-top: 3rem;
+      margin-top: 4rem;
     }
     .border-container {
       padding-left: 2rem;
