--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -32,9 +32,9 @@
 }
 
 .with-shadow-three {
-  border-left: 1px solid var(--border-color);
-  border-right: 1px solid var(--border-color);
-  border-bottom: 1px solid var(--border-color);
+  border-left: 0px solid var(--border-color);
+  border-right: 0px solid var(--border-color);
+  border-bottom: 0px solid var(--border-color);
   box-shadow: 0px 2px 10px var(--shadow-color);
 }
 
@@ -416,11 +416,12 @@ p {
   padding: 1.5rem 1rem 3rem 1rem;
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
+  width: 21rem;
 }
 
 .country-img {
-  height: 12.5rem;
-  width: 20rem;
+  height: 13rem;
+  width: 21rem;
 }
 
 .country-img img {
@@ -501,7 +502,7 @@ p {
     padding-left: 2rem;
   }
   .details .pt-2 {
-    margin-top: 3rem;
+    margin-top: 4rem;
   }
   .details .border-container {
     padding-left: 2rem;
